--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "dev": "DEBUG=explore:* nodemon npm start"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "body-parser": "^1.19.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "ngrok": "^4.3.0"
