Update .env example

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
-VERIFY_TOKEN=xxxxxxxxxx
+VERIFY_TOKEN=xxxxxxxxxxxxxxxxxxxx
+CLIENT_ID=12345
+CLIENT_SECRET=abcxxxxxxxxxxxxxxxxxxxxxxxxxxxxyz
+AUTH_URL=http://localhost:3000/auth/exchange_token
+AUTH_SCOPE=activity:read_all
+
+DB_USER=Username
+DB_PASS=SecuredPassword
+DB_HOST=localhost
+DB_NAME=databaseName
