--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "explore",
+  "name": "stats",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "DEBUG=explore:* nodemon npm start"
+    "dev": "DEBUG=stats:* nodemon npm start"
   },
   "dependencies": {
     "axios": "^0.26.0",
