--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "DEBUG=stats:* nodemon npm start"
+    "dev": "DEBUG=stats:* nodemon npm start",
+    "testConnection": "node ./tools/testdb.js"
   },
   "dependencies": {
     "axios": "^0.26.0",
