--- a/OLD/package.json
+++ b/OLD/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stats",
+  "name": "explore",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -16,9 +16,11 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
-    "ngrok": "^4.3.0"
+    "ngrok": "^4.3.0",
+    "typescript": "^4.9.4"
   }
 }
