--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,5 +8,7 @@
       "outDir": "dist",
       "strictNullChecks": true,
     },
-    "lib": ["es2015"]
+    "lib": ["es2015"],
+    "include": ["src/**/*"],
+    "exclude": ["node_modules", "**/*.spec.ts"]
   }
