--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,8 +4,9 @@ FROM node:16
 WORKDIR /usr/src/app
 COPY package*.json ./
 COPY tsconfig*.json ./
+COPY npm-install-low-memory.sh ./
 
-RUN npm install
+RUN ./npm-install-low-memory.sh
 
 COPY ./src ./src
 
