--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,12 @@
+upstream loadbalancer {
+  server backend:3000;
+}
+
+
 server {
   listen 80;
   server_name localhost;
   location / {
-    proxy_pass http://localhost:3000;
+    proxy_pass http://loadbalancer;
   }
 }
