Add auth module

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,24 @@
-upstream loadbalancer {
-  server backend:3000;
+upstream serializer {
+  server serializer:3000;
+}
+
+upstream auth {
+  server auth:3000;
 }
 
 
 server {
   listen 80;
-  server_name localhost;
+  server_name localhost/webhook;
   location / {
-    proxy_pass http://loadbalancer;
+    proxy_pass http://serializer;
+  }
+}
+
+server {
+  listen 80;
+  server_name localhost/auth;
+  location / {
+    proxy_pass http://auth;
   }
 }
