--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,17 @@
 version: '3.9'
 services:
-  backend:
+  serializer:
     restart: on-failure
     build: ./serializer
     ports:
       - '81:3000'
+    env_file:
+      - .env
+  auth: 
+    restart: on-failure
+    build: ./auth
+    ports:
+      - '82:3000'
     env_file:
       - .env
   nginx:
@@ -12,4 +19,5 @@ services:
     ports:
     - '80:80'
     depends_on:
-    - backend
+    - serializer
+    - auth
