--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,24 +1,22 @@
-upstream serializer {
-  server serializer:3000;
-}
-
-upstream auth {
-  server auth:3000;
-}
-
-
 server {
-  listen 80;
-  server_name localhost/webhook;
-  location / {
-    proxy_pass http://serializer;
-  }
-}
 
-server {
-  listen 80;
-  server_name localhost/auth;
-  location / {
-    proxy_pass http://auth;
-  }
+    location /webhook/ {
+      proxy_pass http://serializer:3002/;
+
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /auth/ {
+      proxy_pass http://auth:3001/;
+
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+
 }
