--- a/serializer/Dockerfile
+++ b/serializer/Dockerfile
@@ -6,8 +6,11 @@ COPY package*.json ./
 COPY tsconfig*.json ./
 COPY --chmod=777 npm-install-low-memory.sh ./
 
-RUN ./npm-install-low-memory.sh
+# RUN ./npm-install-low-memory.sh
+RUN npm install
 
 COPY ./src ./src
+
+EXPOSE 3002
 
 CMD ["npm", "start"]
