--- a/serializer/Dockerfile
+++ b/serializer/Dockerfile
@@ -4,10 +4,10 @@ FROM node:16
 WORKDIR /usr/src/app
 COPY package*.json ./
 COPY tsconfig*.json ./
-COPY --chmod=777 npm-install-low-memory.sh ./
+# COPY --chmod=777 npm-install-low-memory.sh ./
 
-RUN ./npm-install-low-memory.sh
-# RUN npm install
+# RUN ./npm-install-low-memory.sh
+RUN npm install
 
 COPY ./src ./src
 
